<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Action Bar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Action Bar</string>
    <string name="btn_send_message">Send Message</string>
    
    <!-- Activity titles -->    
    <string name="activity_location_found">Location Found</string>
    
    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    
    <!-- Search  -->
    <string name="search_hint">Search color..</string>
    <string name="buttontext">runDialog</string>

    <string name="hello">Hello World, MenuExampleActivity!</string>
    <string name="exitOption">Exit</string>
    <string name="aboutOption">About</string>


</resources>
